# peg-solitaire

./: .env.example  .gitignore  .htaccess  Cargo.toml  Changelog.md  Readme.md  Trunk.deploy.toml  deploy.sh  dev.sh  index.html  justfile  todo.md
common/: Cargo.toml
common/src/: coord.rs  debruijn.rs  lib.rs
evaluation/: k.ipynb  main.ipynb  plotting_common.py  pyproject.toml  state_space.ipynb
evaluation/data/: data-primes-k-fxhash.json  data-primes-k-with-bad-hashing.json  size-comparison.json  solver-stats.json  state-space-sizes.json
frontend/: Cargo.toml  Readme.md  index.html
frontend/img/: Readme.md
frontend/proptest-regressions/game_state/: game_state.txt
frontend/src/: game_state.rs  main.rs  reducible_game_state.rs
frontend/src/components/: board.rs  mod.rs  timeline.rs
frontend/src/game_state/: arrangement.rs  game_state.rs  mod.rs  permutation.rs  solver.rs
precompute/: Cargo.toml  Readme.md
precompute/src/: lib.rs  main.rs  positions.rs  solvable_positions.rs
report/: board_illustration.typ  paper.typ  references.bib  section_eval.typ  section_future.typ  section_intermediate.typ  section_intro.typ  section_pseudocode.typ  section_related.typ  section_solver.typ  utils.typ
report/template/: jacow.typ
server/: Cargo.toml
server/src/: lib.rs  main.rs  solvable_positions.rs  solver.rs
src/: cli.rs  game_state.rs  main.rs
