[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
yew_icons = { version = "0.8.0", features = ["LucideRedo2", "LucideUndo2"] }
common = { path = "../common" }

[build-dependencies]
server = { version = "0.1.0", path = "../server" }
