[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
yew_icons = { version = "0.8.0", features = ["LucideRedo2", "LucideUndo2"] }
common = { path = "../common" }
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.78", features = ["HtmlElement"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
anyhow = { version = "1.0.100", default-features = false }
