[package]
name = "precompute"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.20"
common = { path = "../common" }
rayon = "1.11.0"
primal = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rand = { workspace = true }
rand_pcg = { workspace = true }
tempfile = "3.21.0"
bincode = { workspace = true }
bitvec = { workspace = true }

[dev-dependencies]
rand = "0.9.2"

