[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
bitvec = "1.0.1"
log = "0.4.20"
tokio = { version = "1.34.0", features = ["full"] }
common = { path = "../common" }
rayon = "1.11.0"
bit-vec = "0.8.0"
bincode = "2.0.1"
rand = "0.9.2"
primal = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rand_pcg = "0.9.0"
tempfile = "3.21.0"

[profile.release]
debug = true

[dev-dependencies]
rand = "0.9.2"
